--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@ body{
     margin: 0;
     padding: 0;
 }
+.car2{
+  width: 100%;
+  height: 40rem;
+}
 
 .custom-calendar {
     background-color:white;
@@ -76,16 +80,4 @@ body{
   
  
 
-@media only screen and (max-width: 600px) {
-  /* Hide the car image on mobileS screens */
-  .car_image {
-    display: none;
-  }
-}
 
-@media only screen and (min-width: 601px) and (max-width: 1024px) {
-  /* Hide the car image on mobileM screens */
-  .car_image {
-    display: none;
-  }
-}
